--- a/personal-finance-frontend/pubspec.yaml
+++ b/personal-finance-frontend/pubspec.yaml
@@ -11,17 +11,34 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Charts
   fl_chart: ^0.68.0
 
+  # UI
   cupertino_icons: ^1.0.8
+
+  # Networking
   http: ^1.2.0
+
+  # Internationalization
+  intl: ^0.19.0
+
+  # Storage
   flutter_secure_storage: ^9.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+
+  # State Management
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
 
 flutter:
   uses-material-design: true
