--- a/personal-finance-frontend/pubspec.yaml
+++ b/personal-finance-frontend/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.1
+  shared_preferences: ^2.2.2
 
   # State Management
   provider: ^6.1.1
